// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletList should not render anything if no sub-children provided 1`] = `<div />`;

exports[`BulletList should render custom list item render with default ul if options provided without bulletList and with bulletListItem 1`] = `
<div>
  <ul
    class="list-bullet"
  >
    <div>
      <span>
        Custom Bullet List Item - 
        {"type":"listitem","indent":0,"direction":null,"format":"","version":1,"value":1,"children":[{"detail":0,"format":0,"mode":"normal","style":"","text":"heading text","type":"text","version":1}]}
      </span>
      heading text
    </div>
  </ul>
</div>
`;

exports[`BulletList should render custom list render with default li if options provided with bulletList and without bulletListItem 1`] = `
<div>
  <div>
    <span>
      Custom Bullet List - 
      {"type":"list","direction":null,"format":"","indent":0,"version":1,"start":1,"listType":"bullet","children":[{"type":"listitem","indent":0,"direction":null,"format":"","version":1,"value":1,"children":[{"detail":0,"format":0,"mode":"normal","style":"","text":"heading text","type":"text","version":1}]}],"tag":"ul"}
    </span>
    <li
      value="1"
    >
      heading text
    </li>
  </div>
</div>
`;

exports[`BulletList should render default ul with default li if no options provided 1`] = `
<div>
  <ul
    class="list-bullet"
  >
    <li
      value="1"
    >
      heading text
    </li>
  </ul>
</div>
`;

exports[`BulletList should render default ul with default li if options provided without bulletList and without bulletListItem 1`] = `
<div>
  <ul
    class="list-bullet"
  >
    <li
      value="1"
    >
      heading text
    </li>
  </ul>
</div>
`;

exports[`BulletList should render list item link if list item is a link 1`] = `
<div>
  <ul
    class="list-bullet"
  >
    <li
      value="1"
    >
      <a
        href="https://www.example.com"
      >
        heading text
      </a>
    </li>
  </ul>
</div>
`;

exports[`BulletList should render list with sub lists if sub lists are provided 1`] = `
<div>
  <ul
    class="list-bullet"
  >
    <li
      value="1"
    >
      <ul
        class="list-bullet"
      >
        <li
          value="1"
        >
          <ul
            class="list-bullet"
          >
            <li
              value="1"
            >
              <ul
                class="list-bullet"
              >
                <li
                  value="1"
                >
                  heading text
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`CheckList should not render anything if no sub-children provided 1`] = `<div />`;

exports[`CheckList should render custom list item render with default ul if options provided without checkList and with checkListItem 1`] = `
<div>
  <ul
    class="list-check"
  >
    <div>
      <span>
        Custom Check List Item - 
        {"type":"listitem","indent":0,"direction":null,"format":"","version":1,"value":1,"children":[{"detail":0,"format":0,"mode":"normal","style":"","text":"heading text","type":"text","version":1}],"checked":false}
      </span>
      heading text
    </div>
  </ul>
</div>
`;

exports[`CheckList should render custom list render with default li if options provided with checkList and without checkListItem 1`] = `
<div>
  <div>
    <span>
      Custom Check List - 
      {"type":"list","direction":null,"format":"","indent":0,"version":1,"start":1,"listType":"check","children":[{"type":"listitem","indent":0,"direction":null,"format":"","version":1,"value":1,"children":[{"detail":0,"format":0,"mode":"normal","style":"","text":"heading text","type":"text","version":1}],"checked":false}],"tag":"ul"}
    </span>
    <li
      aria-checked="false"
      role="checkbox"
      tabindex="-1"
      value="1"
    >
      <input
        id="randomUUID"
        type="checkbox"
      />
      <label
        for="randomUUID"
      >
        heading text
      </label>
    </li>
  </div>
</div>
`;

exports[`CheckList should render default ul with default li if no options provided 1`] = `
<div>
  <ul
    class="list-check"
  >
    <li
      aria-checked="false"
      role="checkbox"
      tabindex="-1"
      value="1"
    >
      <input
        id="randomUUID"
        type="checkbox"
      />
      <label
        for="randomUUID"
      >
        heading text
      </label>
    </li>
  </ul>
</div>
`;

exports[`CheckList should render default ul with default li if no options provided and list item checked 1`] = `
<div>
  <ul
    class="list-check"
  >
    <li
      aria-checked="true"
      role="checkbox"
      tabindex="-1"
      value="1"
    >
      <input
        checked=""
        id="randomUUID"
        type="checkbox"
      />
      <label
        for="randomUUID"
      >
        heading text
      </label>
    </li>
  </ul>
</div>
`;

exports[`CheckList should render default ul with default li if options provided without checkList and without checkListItem 1`] = `
<div>
  <ul
    class="list-check"
  >
    <li
      aria-checked="false"
      role="checkbox"
      tabindex="-1"
      value="1"
    >
      <input
        id="randomUUID"
        type="checkbox"
      />
      <label
        for="randomUUID"
      >
        heading text
      </label>
    </li>
  </ul>
</div>
`;

exports[`CheckList should render list item link if list item is a link 1`] = `
<div>
  <ul
    class="list-check"
  >
    <li
      aria-checked="false"
      role="checkbox"
      tabindex="-1"
      value="1"
    >
      <input
        id="randomUUID"
        type="checkbox"
      />
      <label
        for="randomUUID"
      >
        <a
          href="https://www.example.com"
        >
          heading text
        </a>
      </label>
    </li>
  </ul>
</div>
`;

exports[`CheckList should render list with sub lists if sub lists are provided 1`] = `
<div>
  <ul
    class="list-check"
  >
    <li
      aria-checked="false"
      role="checkbox"
      tabindex="-1"
      value="1"
    >
      <input
        id="randomUUID"
        type="checkbox"
      />
      <label
        for="randomUUID"
      >
        <ul
          class="list-check"
        >
          <li
            aria-checked="false"
            role="checkbox"
            tabindex="-1"
            value="1"
          >
            <input
              id="randomUUID"
              type="checkbox"
            />
            <label
              for="randomUUID"
            >
              <ul
                class="list-check"
              >
                <li
                  aria-checked="false"
                  role="checkbox"
                  tabindex="-1"
                  value="1"
                >
                  <input
                    id="randomUUID"
                    type="checkbox"
                  />
                  <label
                    for="randomUUID"
                  >
                    <ul
                      class="list-check"
                    >
                      <li
                        aria-checked="false"
                        role="checkbox"
                        tabindex="-1"
                        value="1"
                      >
                        <input
                          id="randomUUID"
                          type="checkbox"
                        />
                        <label
                          for="randomUUID"
                        >
                          heading text
                        </label>
                      </li>
                    </ul>
                  </label>
                </li>
              </ul>
            </label>
          </li>
        </ul>
      </label>
    </li>
  </ul>
</div>
`;

exports[`List should not render anything if no children provided 1`] = `<div />`;

exports[`NumberList should not render anything if no sub-children provided 1`] = `<div />`;

exports[`NumberList should render custom list item render with default ol if options provided without numberList and with numberListItem 1`] = `
<div>
  <ol
    class="list-number"
    style="list-style: decimal;"
  >
    <div>
      <span>
        Custom Number List Item - 
        {"type":"listitem","indent":0,"direction":null,"format":"","version":1,"value":1,"children":[{"detail":0,"format":0,"mode":"normal","style":"","text":"heading text","type":"text","version":1}]}
      </span>
      heading text
    </div>
  </ol>
</div>
`;

exports[`NumberList should render custom list render with default li if options provided with numberList and without numberListItem 1`] = `
<div>
  <div>
    <span>
      Custom Number List - 
      {"type":"list","direction":null,"format":"","indent":0,"version":1,"start":1,"listType":"number","children":[{"type":"listitem","indent":0,"direction":null,"format":"","version":1,"value":1,"children":[{"detail":0,"format":0,"mode":"normal","style":"","text":"heading text","type":"text","version":1}]}],"tag":"ol"}
    </span>
    <li
      value="1"
    >
      heading text
    </li>
  </div>
</div>
`;

exports[`NumberList should render default ol with default li if no options provided 1`] = `
<div>
  <ol
    class="list-number"
    style="list-style: decimal;"
  >
    <li
      value="1"
    >
      heading text
    </li>
  </ol>
</div>
`;

exports[`NumberList should render default ol with default li if options provided without numberList and without numberListItem 1`] = `
<div>
  <ol
    class="list-number"
    style="list-style: decimal;"
  >
    <li
      value="1"
    >
      heading text
    </li>
  </ol>
</div>
`;

exports[`NumberList should render list item link if list item is a link 1`] = `
<div>
  <ol
    class="list-number"
    style="list-style: decimal;"
  >
    <li
      value="1"
    >
      <a
        href="https://www.example.com"
      >
        heading text
      </a>
    </li>
  </ol>
</div>
`;

exports[`NumberList should render list with sub lists with different styling, resetting after 5 levels deep by default, if sub lists are provided 1`] = `
<div>
  <ol
    class="list-number"
    style="list-style: decimal;"
  >
    <li
      value="1"
    >
      <ol
        class="list-number"
        style="list-style: upper-alpha;"
      >
        <li
          value="1"
        >
          <ol
            class="list-number"
            style="list-style: lower-alpha;"
          >
            <li
              value="1"
            >
              <ol
                class="list-number"
                style="list-style: upper-roman;"
              >
                <li
                  value="1"
                >
                  <ol
                    class="list-number"
                    style="list-style: lower-roman;"
                  >
                    <li
                      value="1"
                    >
                      <ol
                        class="list-number"
                        style="list-style: decimal;"
                      >
                        <li
                          value="1"
                        >
                          heading text
                        </li>
                      </ol>
                    </li>
                  </ol>
                </li>
              </ol>
            </li>
          </ol>
        </li>
      </ol>
    </li>
  </ol>
</div>
`;
